# agentevolution

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  proposal.md  pyproject.toml
examples/: full_loop.py  multi_agent_demo.py
src/agentevolution/: __init__.py  __main__.py  config.py  server.py
src/agentevolution/dashboard/: __init__.py  app.py
src/agentevolution/dashboard/static/: app.js  index.html  style.css
src/agentevolution/fitness/: __init__.py  scorer.py
src/agentevolution/forge/: __init__.py  normalizer.py  publisher.py  schema_gen.py
src/agentevolution/gauntlet/: __init__.py  profiler.py  sandbox.py  security.py  signer.py
src/agentevolution/hivemind/: __init__.py  discovery.py  recipes.py
src/agentevolution/provenance/: __init__.py  chain.py  trust.py
src/agentevolution/storage/: __init__.py  database.py  models.py  vector_store.py
src/agentevolution/utils/: __init__.py  hashing.py
