[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentevolution"
version = "0.1.1"
description = "The Natural Selection Protocol for AI Agents - A self-evolving tool ecosystem."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "AgentEvolution Contributors" }
]
keywords = ["mcp", "ai-agents", "tool-sharing", "autonomous", "self-evolving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.110.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
docker = [
    "docker>=7.0.0",
]

[project.scripts]
agentevolution = "agentevolution.server:main"
agentevolution-dashboard = "agentevolution.dashboard.app:main"


[project.urls]
Homepage = "https://github.com/agentevolution/agentevolution"
Documentation = "https://github.com/agentevolution/agentevolution/docs"
Repository = "https://github.com/agentevolution/agentevolution"
Issues = "https://github.com/agentevolution/agentevolution/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentevolution"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
